djangoapp-k8s/pod.yaml
apiVersion: v1
kind: Pod
metadata:
   name: netcat
   namespace: app
spec:
   containers:
   - name: netcat
     image: curlimages/curl 
     command: [ 'sh', '-c', 'sleep 3600']
