djangoapp-k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-app-svc
  namespace: app
spec:
  selector:
     app: django-app
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 80
