djangoapp-k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: django-app-ingress
  namespace: app
  annotations:
     kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: "djangoapp.thefinisher.xyz"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: django-app-svc
            port:
              number: 80
